@@ -1,5 +1,10 @@
 2008-12-27  Helmut Eller  <heller@common-lisp.net>
 
+	* slime-repl.el (slime-repl-quit): Kill the repl buffer before
+	quitting.  Reported by Volkan YAZICI.
+
+2008-12-27  Helmut Eller  <heller@common-lisp.net>
+
 	* slime-asdf.el: Require slime-repl.
 
 2008-12-26  Helmut Eller  <heller@common-lisp.net>
